--- a/public/templates/pages/admin.twig
+++ b/public/templates/pages/admin.twig
@@ -152,6 +152,11 @@
                     {% if message %}
                     <div class="alert alert-success">{{ message }}</div>
                     {% endif %}
+                    {% if error == 'selfdelete' %}
+                    <div class="alert alert-danger">
+                        {{ _('No puedes eliminar tu propia cuenta de administrador') }}
+                    </div>
+                    {% endif %}
                     <div class="table-responsive">
                         <table class="table table-striped">
                             <thead>
