admin translations is not working

--- a/public/templates/pages/admin.twig
+++ b/public/templates/pages/admin.twig
@@ -86,6 +86,17 @@
                     </li>
                 </ul>
             </div>
+            <!-- Selector de idioma en la barra superior -->
+            <div class="dropdown ms-2">
+                <button class="btn btn-dark dropdown-toggle" type="button" id="languageDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-globe"></i>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdown">
+                    <li><a class="dropdown-item {% if idioma_actual == 'es' %}active{% endif %}" href="/setlang/es?redirect={{ current_url|url_encode }}">Español</a></li>
+                    <li><a class="dropdown-item {% if idioma_actual == 'en' %}active{% endif %}" href="/setlang/en?redirect={{ current_url|url_encode }}">English</a></li>
+                    <li><a class="dropdown-item {% if idioma_actual == 'ca' %}active{% endif %}" href="/setlang/ca?redirect={{ current_url|url_encode }}">Català</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
