--- a/public/templates/pages/api/api_docs.twig
+++ b/public/templates/pages/api/api_docs.twig
@@ -239,7 +239,7 @@
                     <div class="input-group mb-3">
                         <span class="input-group-text"><i class="fas fa-key"></i></span>
                         <input type="text" id="api-token" class="form-control" placeholder="Tu token de API">
-                        <button class="btn btn-outline-secondary" type="button" id="save-token">Guardar</button>
+                        <button class="btn btn-outline-secondary" type="button" id="save-token">💾</button>
                     </div>
                 </div>
             </div>
