--- a/public/templates/pages/admin.twig
+++ b/public/templates/pages/admin.twig
@@ -92,9 +92,21 @@
                     <i class="fas fa-globe"></i>
                 </button>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdown">
-                    <li><a class="dropdown-item {% if idioma_actual == 'es' %}active{% endif %}" href="/setlang/es?redirect={{ current_url|url_encode }}">Español</a></li>
-                    <li><a class="dropdown-item {% if idioma_actual == 'en' %}active{% endif %}" href="/setlang/en?redirect={{ current_url|url_encode }}">English</a></li>
-                    <li><a class="dropdown-item {% if idioma_actual == 'ca' %}active{% endif %}" href="/setlang/ca?redirect={{ current_url|url_encode }}">Català</a></li>
+                    <li>
+                        <button type="button" class="dropdown-item lang-switch {% if idioma_actual == 'es' %}active{% endif %}" data-lang="es">
+                            🇪🇸 Español
+                        </button>
+                    </li>
+                    <li>
+                        <button type="button" class="dropdown-item lang-switch {% if idioma_actual == 'en' %}active{% endif %}" data-lang="en">
+                            🇬🇧 English
+                        </button>
+                    </li>
+                    <li>
+                        <button type="button" class="dropdown-item lang-switch {% if idioma_actual == 'ca' %}active{% endif %}" data-lang="ca">
+                            🐱 Català
+                        </button>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -481,6 +493,8 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <script src="/assets/scripts/lang_switch.js"></script>
     
     <script>
         // Función para confirmación de eliminación
