--- a/public/assets/styles/generic.css
+++ b/public/assets/styles/generic.css
@@ -282,3 +282,17 @@ h1, h2, h3, h4, h5, h6 {
     padding: 10px;
   }
 }
+
+.error-container {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #212529;
+}
+
+.error-content {
+  max-width: 400px;
+  text-align: center;
+  padding: 2rem;
+}
