--- a/public/templates/pages/home.twig
+++ b/public/templates/pages/home.twig
@@ -6,14 +6,10 @@
     <title>{{ title }}</title>
     
     <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    
-    <!-- Estilos personalizados mínimos -->
+    <link href="/assets/lib/twbs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/lib/fontawesome/fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="stylesheet" href="/assets/styles/generic.css">
-    
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
+        
     <!-- Estilos inline mínimos -->
     <style>
         .hero {
