--- a/public/templates/components/navbar.twig
+++ b/public/templates/components/navbar.twig
@@ -78,18 +78,13 @@
                     <a class="nav-link dropdown-toggle" href="#" id="languageDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-globe"></i>
-                        {% set lang_code = {
-                            'es': 'ES',
-                            'en': 'EN',
-                            'ca': 'CA'
-                        } %}
+                        {% set lang_code = { 'es': 'ES', 'en': 'EN', 'ca': 'CA' } %}
                         <span class="d-none d-md-inline ml-1">{{ lang_code[idioma_actual] }}</span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdown">
                         {% for code, lang in languages %}
                             <li>
-                                <button type="button" 
-                                        class="dropdown-item lang-switch {{ idioma_actual == code ? 'active' }}" 
+                                <button type="button" class="dropdown-item lang-switch {{ idioma_actual == code ? 'active' }}" 
                                         data-lang="{{ code }}">
                                     {{ lang.icon }} {{ lang.name }}
                                 </button>
