--- a/public/templates/pages/about.twig
+++ b/public/templates/pages/about.twig
@@ -13,10 +13,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        {% include 'components/navbar.twig' %}
-    </header>
-
+    <header> {% include 'components/navbar.twig' %} </header>
     <main>
         <!-- Sección Hero -->
         <section class="hero text-center text-white">
